force-app/main/default/objects/GSA_Project_Revenue__c/GSA_Project_Revenue__c.object-meta.xml
<CustomObject>
    <label>GSA Project Revenue</label>
    <nameField>
        <displayFormat>GSA-R-{0000000000}</displayFormat>
        <label>GSA Project Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSA Project Revenue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>