force-app/main/default/objects/GSA_Project_Revenue__c/fields/Octo_FY__c.field-meta.xml
<CustomField>
    <fullName>Octo_FY__c</fullName>
    <label>Octo FY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>